[package]
name = "rust-upload-progress"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.55.3"
aws-sdk-s3 = "0.28.0"
aws-smithy-http = "0.55.3"
cargo-watch = "8.4.0"
futures = "0.3.28"
futures-util = "0.3.28"
hyper = { version = "0.14.26", features = ["stream"] }
indicatif = "0.17.5"
rand = "0.8.5"
reqwest = { version = "0.11.18", features = ["stream"] }
tokio = { version ="1.28.2", features = ["full"] }
uuid = "1.3.4"
